# investment-rag

./: .gitignore  QA.md  README.md  config.example.json  main.py  pyproject.toml
src/: chunker.py  db.py  embeddings.py  fetch_sec.py  fetch_transcripts.py  ingest.py  manage_docs.py  server.py
src/parsers/: __init__.py  html_parser.py
